# serverless-api-contract-template

./: .dockerignore  Dockerfile  Dockerfile.error  Dockerfileqwe  Getting_Started.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  scripts.py  service.yaml
docs/: description.md
src/: handler.py
tests/: test_buml_knative_python_template.py  test_handler.py  test_main.py
