[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Philipp Schmid <schmidphilipp1995@gmail.com>"]



# [tool.poetry.scripts]
# format = "scripts:format"
# reformat = "scripts:reformat"
# lint = "scripts:lint"
# start = "scripts:start"
# test = "scripts:test"

[tool.poe.tasks]
test       = "pytest --cov=poethepoet"                                # simple command based task
start     = { shell = "uvicorn main:app --reload" }  # shell script based task


[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"