[tool.poetry]
name = "Serverless API Contract"
version = "0.2.0"
description = ""
authors = ["Philipp Schmid <schmidphilipp1995@gmail.com>"]



# [tool.poetry.scripts]
# format = "scripts:format"
# reformat = "scripts:reformat"
# lint = "scripts:lint"
# start = "scripts:start"
# test = "scripts:test"

[tool.poe.tasks]
format    = "black ."
lint      = "pylama"
type      = "mypy ."
test      = "pytest"    
test-all  =  { shell = "poe format && poe lint && poe type && poe test" }                       # simple command based task
start     = { shell = "uvicorn main:app --reload" }  # shell script based task
build     = { shell = "docker build . -t buml-1 " }  # shell script based task
push = { shell = "docker tag buml-1 philschmi/buml-1:latest; docker push philschmi/buml-1"}

[tool.black]
line-length = 79
target-version = ['py38']


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = {extras = ["standard"], version = "^0.12.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
poethepoet = "^0.9.0"
black = {version = "^20.8b1", allow-prereleases = true}
pylama = "^7.7.1"
pylint = "^2.6.0"
mypy = "^0.790"
pydocstyle = "^5.1.1"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"